<resources>
    <string name="app_name">TD01</string>
    <string name="devise_de_depart">Devise de départ</string>
    <string name="devise_de_conversion">Devise de conversion</string>
    <string name="usd">USD</string>
    <string name="cad">CAD</string>
    <string name="euro">EURO</string>
    <string name="gbp">GBP</string>
    <string name="yen">YEN</string>
    <string name="montant">Montant</string>
    <string name="resultat">Résultat</string>
    <string name="taux_de_conversion">Taux de conversion</string>
    <string name="raz">RAZ</string>
    <string name="convertir">CONVERTIR</string>
    <string name="Switch_language">Lang</string>
    <string name="eng">Eng</string>
    <string name="fr">Fr</string>
</resources>
